# ReelSummarize-backend

./: .vercelignore  README.md  config.py  main.py  pyproject.toml  requirements.txt  schemas.py  vercel.json
api/: index.py
services/: downloader.py  geocoder.py  summarizer.py
