[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiofiles==23.2.1",
    "fastapi==0.109.2",
    "google-genai>=1.2.0",
    "httpx==0.26.0",
    "pydantic==2.6.1",
    "python-dotenv==1.0.1",
    "python-multipart==0.0.9",
    "uvicorn[standard]==0.27.1",
    "yt-dlp>=2025.12.8",
]
